Add simple card filtering

--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
 </head>
 
 <body>
-  <div>
+  <div class="apkg-upload">
     Select an <a href="http://ankisrs.net">Anki</a> APKG file from your computer:
-    <input type="file" id="ankiFile" name="files">
+    <input type="file" name="files">
+  </div>
+
+  <div class="searchbox" style="display: none">
+    <input type="text" placeholder="Search...">
   </div>
 
   <div id="anki"></div>
