--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
     <input type="file" name="files">
   </div>
 
+  <div class="zoombox" style="display: none">
+    Zoom:
+    <button class="font-small">漢字</button>
+    <button class="font-normal active">漢字</button>
+    <button class="font-large">漢字</button>
+    <button class="font-very-large">漢字</button>
+    <button class="font-super-large">漢字</button>
+  </div>
+
   <div class="searchbox" style="display: none">
     <input type="text" placeholder="Search...">
   </div>
