--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
   <link rel="stylesheet" type="text/css" href="apkg.css">
 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js" charset="utf-8"></script>
-  <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js" charset="utf-8"></script>
+  <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
   <script src="https://kripken.github.io/sql.js/js/sql.js" charset="utf-8"></script>
 
   <script src="unzip.min.js" charset="utf-8"></script>
